src/objects/Venue_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>CARE</fullName>
                </value>
                <value>
                    <fullName>Intrabiz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Venue_Rate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Room_Name__c</fullName>
        <label>Room Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>evening</fullName>
                </value>
                <value>
                    <fullName>All day</fullName>
                </value>
                <value>
                    <fullName>weekend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Setup_Time__c</fullName>
        <label>Setup Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Tidyup_Time__c</fullName>
        <label>Tidyup Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>VenueKey__c</fullName>
        <externalId>true</externalId>
        <label>VenueKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Venue_RateKey__c</fullName>
        <externalId>true</externalId>
        <label>Venue RateKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Venue Rate</relationshipLabel>
        <relationshipName>Venue_Rate</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Venue Rate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Venue Rate</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>